{
    "name": "TouchAction",
    "maps": [
        {
            "name": "TouchInput",
            "id": "9ac8bb8e-de2a-4b6f-bee1-f99aff4e9203",
            "actions": [
                {
                    "name": "TouchPosition",
                    "type": "Value",
                    "id": "bda7fb2a-4802-4fbe-9ab2-b467dec4374b",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "TouchPress",
                    "type": "Button",
                    "id": "519ca5a9-2962-4d1e-b1fa-10ecf1332cac",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Tap",
                    "initialStateCheck": false
                },
                {
                    "name": "TouchMove",
                    "type": "Button",
                    "id": "9be7b055-48a1-4a07-8a42-090bb156cdf4",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Tap",
                    "initialStateCheck": false
                },
                {
                    "name": "Pause",
                    "type": "Button",
                    "id": "0968e67b-0efb-4313-a18f-61c6ee486966",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "RecenterCamera",
                    "type": "Button",
                    "id": "65102619-1d4d-47a0-a0b6-168cfa75d838",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "33d22185-dd4a-477a-8f24-d9162da1ec9d",
                    "path": "<Touchscreen>/primaryTouch/press",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchPress",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c56f758d-27e8-41b3-97f0-c3e0dcb7fd5f",
                    "path": "<Touchscreen>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d8d732c4-3041-423d-919e-9338e4955043",
                    "path": "<Touchscreen>/primaryTouch/press",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchMove",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "7f2834f8-1f6d-40ca-b44c-e29184954c6a",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Pause",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}